# dlib

./: .gitignore  CMakeLists.txt  conanfile.py  project.conf  setup.py
dlib/: CMakeLists.txt
dlib/cmake_utils/: check_if_neon_available.cmake  set_compiler_specific_options.cmake  use_cpp_11.cmake
dlib/cmake_utils/test_for_cpp11/: CMakeLists.txt
dlib/python/: numpy_image.h
scripts/: build-android.bat  build-headers.bat  build-ios.sh  build-macos.sh  build-pc.bat  build.bat
tools/python/: CMakeLists.txt  conanfile.py
